--- a/Angular1Sample/project.json
+++ b/Angular1Sample/project.json
@@ -1,4 +1,5 @@
 ﻿{
+  "webroot": "wwwroot",
   "version": "1.0.0-*",
   "compilationOptions": {
     "emitEntryPoint": true
@@ -6,7 +7,8 @@
 
   "dependencies": {
     "Microsoft.AspNet.IISPlatformHandler": "1.0.0-rc1-final",
-    "Microsoft.AspNet.Server.Kestrel": "1.0.0-rc1-final"
+    "Microsoft.AspNet.Server.Kestrel": "1.0.0-rc1-final",
+    "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final"
   },
 
   "commands": {
@@ -19,11 +21,12 @@
   },
 
   "exclude": [
-    "wwwroot",
+    //"wwwroot",
     "node_modules"
   ],
   "publishExclude": [
     "**.user",
     "**.vspscc"
   ]
+
 }
